# Boost_JsonParser

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
src/: file_manager.h  json_parser.h  main.cpp  parser.cpp
src/parser/: data.h  file_manager.cpp  file_manager.h  json_parser.h  json_parser2.h
